conf: move sensitive configs to env file and update gitignore

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,3 +1,5 @@
+backend/src/main/resources/application.properties
+.env
 HELP.md
 target/
 .mvn/wrapper/maven-wrapper.jar
@@ -21,10 +23,10 @@ target/
 
 ### NetBeans ###
 /nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
